# cTUI

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  wasm.yml
benches/: buffer_diff.rs  buffer_memory.rs  message_dispatch.rs  ratatui_baseline.rs
ctui-animate/: Cargo.toml
ctui-animate/benches/: interpolate.rs
ctui-animate/src/: AGENTS.md  animated.rs  easing.rs  interpolate.rs  keyframe.rs  lib.rs  manager.rs  scheduler.rs  sequence.rs  spring.rs  transition.rs
ctui-cli/: Cargo.toml
ctui-cli/src/: lib.rs  main.rs  templates.rs
ctui-components/: Cargo.toml
ctui-components/src/: AGENTS.md  block.rs  borders.rs  canvas.rs  chart.rs  checkbox.rs  code.rs  diff.rs  editor.rs  form.rs  gauge.rs  input.rs  lib.rs  link.rs  list.rs  markdown.rs  modal.rs  mouse_trail.rs  padding.rs  paragraph.rs  progress.rs  radio.rs  scrollable.rs  select.rs  slider.rs  sparkline.rs  tab_controller.rs  table.rs  tabs.rs  text.rs  tree.rs
ctui-components/src/snapshots/: ctui_components__block__tests__border_all_double.snap  ctui_components__block__tests__border_all_plain.snap  ctui_components__block__tests__border_all_rounded.snap  ctui_components__block__tests__border_all_thick.snap  ctui_components__block__tests__border_bottom_only.snap  ctui_components__block__tests__border_left_only.snap  ctui_components__block__tests__border_left_right.snap  ctui_components__block__tests__border_positioned_titles.snap  ctui_components__block__tests__border_right_only.snap  ctui_components__block__tests__border_title_on_left.snap  ctui_components__block__tests__border_title_on_right.snap  ctui_components__block__tests__border_titles_all_sides.snap  ctui_components__block__tests__border_top_bottom.snap  ctui_components__block__tests__border_top_left.snap  ctui_components__block__tests__border_top_only.snap  ctui_components__block__tests__border_with_title_bottom.snap  ctui_components__block__tests__border_with_title_bottom_center.snap  ctui_components__block__tests__border_with_title_center.snap  ctui_components__block__tests__border_with_title_left.snap  ctui_components__block__tests__border_with_title_right.snap  ctui_components__block__tests__minimal_area.snap  ctui_components__block__tests__no_borders.snap  ctui_components__block__tests__small_area.snap  ctui_components__canvas__tests__canvas_circle.snap  ctui_components__canvas__tests__canvas_line.snap  ctui_components__canvas__tests__canvas_multiple.snap  ctui_components__canvas__tests__canvas_rectangle.snap  ctui_components__chart__tests__chart_horizontal_bars.snap  ctui_components__chart__tests__chart_line.snap  ctui_components__chart__tests__chart_vertical_bars.snap  ctui_components__chart__tests__chart_with_values.snap  ctui_components__checkbox__tests__checkbox_checked.snap  ctui_components__checkbox__tests__checkbox_group.snap  ctui_components__checkbox__tests__checkbox_no_label.snap  ctui_components__checkbox__tests__checkbox_unchecked.snap  ctui_components__diff__tests__diff_empty.snap  ctui_components__diff__tests__diff_modify.snap  ctui_components__diff__tests__diff_no_line_numbers.snap  ctui_components__diff__tests__diff_simple_add.snap  ctui_components__diff__tests__diff_simple_remove.snap  (+89 more)
ctui-core/: Cargo.toml  README.md
ctui-core/examples/: minimal.rs
ctui-core/src/: AGENTS.md  cell.rs  component.rs  error.rs  event.rs  geometry.rs  lib.rs  packed_cell.rs  props.rs  render_loop.rs  renderable.rs  state.rs  style.rs  symbol_table.rs  terminal.rs  unicode.rs
ctui-core/src/backend/: caps.rs  crossterm.rs  mod.rs  test.rs
ctui-core/src/buffer/: diff.rs  mod.rs  selection.rs
ctui-core/src/event/: batcher.rs  kitty.rs  kitty_test.rs  mod.rs
ctui-core/src/pool/: mod.rs
ctui-core/tests/: grapheme_width.rs  layer_tests.rs
ctui-layout/: Cargo.toml
ctui-layout/benches/: flex_bench.rs  taffy_compare.rs
ctui-layout/proptest-regressions/: flex.txt
ctui-layout/src/: AGENTS.md  absolute.rs  constraint.rs  flex.rs  grid.rs  lib.rs  taffy_engine.rs  validation.rs
ctui-layout/tests/: parity_tests.rs
ctui-macros/: Cargo.toml
ctui-macros/src/: lib.rs
ctui-macros/tests/: simple_component.rs
ctui-tests/: Cargo.toml
ctui-tests/src/: lib.rs
ctui-tests/tests/: animation_integration.rs  component_integration.rs  e2e_examples.rs  layout_integration.rs  render_integration.rs  theme_integration.rs
ctui-theme/: Cargo.toml
ctui-theme/src/: AGENTS.md  color.rs  component.rs  elevation.rs  lib.rs  loader.rs  style.rs  theme.rs  transition.rs  validation.rs
ctui-wasm/: Cargo.toml
ctui-wasm/examples/browser/: README.md  index.html  index.js
ctui-wasm/src/: events.rs  lib.rs  renderer.rs
ctui-wasm/src/backend/: canvas.rs  mod.rs
docs/: README.md  getting-started.md  migration.md  performance.md
docs/api/: README.md  animation.md  components.md  core.md  layout.md  theme.md
docs/examples/: README.md  counter.md  dashboard.md  editor.md  game.md  todo.md
docs/gallery/: ALL_COMPONENTS.md  README.md  block.md  canvas.md  chart.md  checkbox.md  code.md  diff.md  editor.md  form.md  gauge.md  input.md  link.md  list.md  markdown.md  modal.md  paragraph.md  progress.md  radio.md  scrollable.md  select.md  slider.md  sparkline.md  table.md  tabs.md  tree.md
docs/tutorial/: 01-setup.md  02-first-component.md  03-state-management.md  04-layout.md  05-styling.md  06-animations.md  07-events.md  README.md
examples/: animation.rs  counter.rs  dashboard.rs  file_explorer.rs  minimal.rs  todo.rs
scripts/: render_gallery.rs
