[package]
name = "ctui-core"
version.workspace = true
edition.workspace = true

[features]
default = []
event-stream = ["crossterm/event-stream"]
component-pool = ["dep:typed-arena"]

[dependencies]
tokio = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
unicode-width = { workspace = true }
bitflags = { workspace = true }
typed-arena = { version = "2.0", optional = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
