[package]
name = "ctui-layout"
version.workspace = true
edition.workspace = true
description = "Flexbox layout engine for cTUI terminal applications"
license.workspace = true
repository.workspace = true

[dependencies]
ctui-core = { path = "../ctui-core" }
taffy = { version = "0.9", optional = true, default-features = false, features = ["std", "flexbox", "taffy_tree"] }

[features]
default = []
taffy-layout = ["dep:taffy"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "flex_bench"
harness = false

[[bench]]
name = "taffy_compare"
harness = false
required-features = ["taffy-layout"]
