[package]
name = "ctui-theme"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Theming and styling system for cTUI framework"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
bitflags = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = "1"

[lints]
workspace = true
