[package]
name = "ctui-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ctui-core = { path = "../ctui-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "KeyboardEvent",
    "MouseEvent",
    "EventTarget",
    "console",
    "Performance",
] }

[lints]
workspace = true
